improve logging and missing dice warning message